syntax = "proto3";

package intr.v1;
option go_package = "intr/v1;intrv1";


service InteractiveService {
  rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  rpc Like(LikeRequest) returns (LikeResponse);
  rpc Collect(CollectRequest) returns (CollectResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message IncrReadCntRequest {
  string bizStr = 1;
  int64 biz_id = 2;
}

message IncrReadCntResponse {

}

message LikeRequest {
  string bizStr = 1;
  int64 biz_id = 2;
  int64 uid = 3;
  bool like = 4;
}

message LikeResponse {

}

message CollectRequest {
  string bizStr = 1;
  int64 biz_id = 2;
  int64 uid = 3;
  int64 cid = 4;
}

message CollectResponse {

}

message GetRequest {
  string bizStr = 1;
  int64 biz_id = 2;
  int64 uid = 3;
}

message GetResponse {
  Interactive interactive = 1;
}

message Interactive {
  string bizStr = 1;
  int64 biz_id = 2;
  int64 read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message GetByIdsRequest {
  string bizStr = 1;
  repeated int64 ids = 2;
}

message GetByIdsResponse {
  map <int64, Interactive> interacs = 1;
}